<resources>
    <string name="app_name">InstagramClone</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="forget_password_text">Please enter the email address of the account for resetting the password.</string>
    <string name="forgot_emailAddr">Email Address</string>
    <string name="forget_password">Forget password?</string>
    <string name="profile_name">Name</string>
    <string name="profile_status">Status</string>
    <string name="save_profile">Save profile</string>
    <string name="sign_out">Sign out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
